# FraudLens

./: .coveragerc  .env.example  .env.production  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.production  LICENSE  Makefile  Makefile.test  README.md  TEST_REPORT.md  docker-compose.email.yml  docker-compose.production.yml  docker-compose.yml  e2e_test_report_20250830_095110.json  external_database_report.json  final_validation_results.json  fraud_report_20250829_132237.csv  launch_analytics_dashboard.sh  launch_dashboard.sh  launch_integrated.sh  pyproject.toml  pytest.ini  requirements.txt  run_e2e_test.py  run_tests.py  setup.py  setup_env.sh  test_advanced_fraud.py  test_analytics_dashboard.py  test_api_server.py  test_debug.py  test_e2e.py  test_e2e_complete.py  test_external_databases.py  test_fraud.py  test_gmail_ssl.py  (+3 more)
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  plugin_submission.md
.github/workflows/: ci-simplified.yml  ci.yml  docs.yml  release.yml  security.yml  tests.yml
ARCHIVE-NOT-NEEDED/: ARCHIVE_SUMMARY.md  E2E_FINAL_100_PERCENT_REPORT.md  E2E_TEST_COMPLETE_REPORT.md  E2E_TEST_REPORT.md  GMAIL_SETUP.md  PERFORMANCE_OPTIMIZATIONS.md  TEST_REPORT_FINAL.md  e2e_test_report_20250829_223008.json  e2e_test_results.json  gradio_app_gmail.py  setup_gmail.py  test_api_security.py  test_dashboard.py  test_e2e_final.py  test_gmail_integration.py  test_gradio.py  test_legitimate.py  test_performance_optimizations.py  test_performance_quick.py
api/: openapi.yaml
configs/development/: config.yaml
configs/production/: config.yaml
data/samples/: sample_texts.json
demo/: GMAIL_SETUP.md  bare_gradio.py  flask_app.py  fraud_analytics_dashboard.py  fraudlens_fresh.py  gradio_analytics_dashboard.py  gradio_app.py  gradio_app_fixed.py  gradio_app_gmail_v2.py  gradio_app_integrated.py  gradio_app_simple.py  gradio_minimal.py  streamlit_app.py  streamlit_enhanced.py
demo/templates/: index.html
docs/: README.md
docs/api/: API_DOCUMENTATION.md  EMAIL_API.md  openapi.yaml
docs/deployment/: DEPLOYMENT_GUIDE.md
docs/source/: api.rst  conf.py  index.rst  installation.rst  modules.rst  quickstart.rst
docs/troubleshooting/: TROUBLESHOOTING_GUIDE.md
docs/user-guide/: EMAIL_MONITOR_GUIDE.md
examples/: __init__.py  phase2_demo.py
fraudlens/: __init__.py  demo.py
fraudlens/agents/: __init__.py  base.py  coordinator.py
fraudlens/api/: auth.py  email_api.py  gmail_imap_integration.py  gmail_integration.py  main.py  secured_api.py
fraudlens/client/: __init__.py  exceptions.py  models.py  retry.py
fraudlens/community/: plugin_framework.py
fraudlens/compat/: __init__.py  config_adapter.py  detector_adapter.py
fraudlens/compliance/: manager.py
fraudlens/config/: __init__.py  profiles.py  secrets.py  settings.py
fraudlens/core/: __init__.py  cache_manager.py  config.py  container.py  env_config.py  optimized_processor.py  performance_monitor.py  pipeline.py  progress_tracker.py
fraudlens/deployment/: manager.py  upgrade.py
fraudlens/events/: __init__.py  bus.py  middleware.py  types.py
fraudlens/fusion/: __init__.py  adaptive_learning.py  explainer.py  fusion_engine.py  pattern_matcher.py  risk_scorer.py  validators.py
fraudlens/integration/: manager.py
fraudlens/integrations/: __init__.py  document_validator.py  phishing_db.py  threat_intel.py
fraudlens/interfaces/: __init__.py  analyzer.py  cache.py  detector.py  storage.py
fraudlens/llm/: __init__.py  orchestrator.py  reasoning.py  schemas.py  tools.py
fraudlens/monitoring/: dashboard.py  monitor.py
fraudlens/observability/: __init__.py  decorators.py  health.py  (+3 more)
scripts/: deploy.sh
tests/: __init__.py  test_comprehensive_system.py  test_e2e.py  test_e2e_comprehensive.py  test_full_e2e_system.py  test_full_system_e2e.py  test_fusion_system.py  test_integrations.py  test_text_processor.py  test_vision_processor.py
(+91 files in other folders)
